# naive-lab-compiler

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/irgen/: mod.rs
src/parser/: mod.rs  sysy.lalrpop
src/rvgen/: mod.rs
src/types/ast/: mod.rs
test/: 0000return.c  0001returnhex.c  0002blockcomment.c  0003returncalc.c  0004returncalc2.c  0005consttest.c  0006constredef.c  0007constmultidef.c  0008vartest.c  0009multiassign.c  0010mixconstvar.c  0012block.c  0013blockmultiret.c  0014multiif.c  0015ifwithscope.c  0016scoperedefine.c  0017ifwithscopecomplex.c  0018longlogic.c  0019basicloop.c  0020conttest.c  0021functest.c  0022globalvar.c  0023voidfunc.c  0024libfunc.c  0025globalconst.c  0026array.c  0028sort.c
