[package]
name = "compiler-principle-lab"
version = "0.1.0"
edition = "2021"
include = ["Cargo.toml", "src/**/*.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.20.2"

[dependencies]
koopa = "0.0.7"
lalrpop-util = { version = "0.20.2", features = ["lexer"] }

